# low-latency-flashbot-mempool

./: .env.mev-low-capital.example  .env.paper-hard.example  .env.shadow-hard.example  .gitignore  .replit  CUSTODY_POLICY.md  Cargo.toml  README.md  WAR_TEST.md  bot_state.sqlite-journal  curri.html  foundry.toml  replit.md  vendas.html
attached_assets/: Pasted-a-pasta-src-bin-ond-efica-o-cerebo-e-os-script-de-deleg_1777170387966.txt
contracts/: Forwander.sol  MevExecutor.sol
scripts/: bot_state.sqlite-journal  check_code.py  doc.md
src/: benchmark.rs  cache.rs  config.rs  contract.rs  dashboard.rs  delegation_guard.rs  extractor.rs  frontrun.rs  main.rs  monitor.rs  queue.rs  rpc.rs  storage.rs  wallets.rs
src/mev/: backrun.rs  block_loop.rs  capital.rs  competition.rs  execution.rs  feedback.rs  inclusion.rs  inclusion_truth.rs  meta_decision.rs  mod.rs  opportunity.rs  post_block.rs  tip_discovery.rs
src/mev/amm/: uniswap_v2.rs  uniswap_v3.rs
src/mev/analytics/: missed_opportunities.rs  mod.rs
src/mev/competition/: mempool_intel.rs  mod.rs  pressure_map.rs  signal_extractor.rs
src/mev/execution/: bundle_sender.rs  contract_encoder.rs  executor.rs  finalizer.rs  flashloan_builder.rs  mod.rs  nonce_manager.rs  payload_builder.rs  replacement_engine.rs  tx_lifecycle.rs
src/mev/feedback/: survival_feedback.rs
src/mev/market_truth/: competition_reality.rs  edge_survival.rs  execution_outcome_real.rs  execution_replay_engine.rs  market_snapshot_engine.rs  (+3 more)
test/: MevExecutor.t.sol
web/: index.html  styles.css
web/js/: app.js  data.js  fx.js  radar.js
(+12 files in other folders)
